--- a/template/index.html
+++ b/template/index.html
@@ -6,9 +6,12 @@
         content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="renderer" content="webkit">
-  <title>a react project demo</title>
+  <title>demo</title>
 </head>
 <body>
-<div id="app"></div>
+<p>
+  hello word!
+  <img src="${require('avatar.jpg')}" alt="avatar">
+</p>
 </body>
 </html>
